# cube-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CIRCULAR_DEPENDENCY_ANALYSIS.md  CONTRIBUTING.md  DEPRECATED.md  Makefile  README.md  ROADMAP.md  plan.md  pyproject.toml
.githooks/: auto-signoff.sh  check-no-local-path.sh  prepare-commit-msg
cubes/: README.md
cubes/arithmetic-cube/: Makefile  pyproject.toml
cubes/arithmetic-cube/src/arithmetic_cube/: __init__.py  benchmark.py  debug.py  task.py
cubes/browsercomp/: Makefile  README.md  pyproject.toml
cubes/browsercomp/scripts/: generate_task_metadata.py
cubes/browsercomp/src/browsercomp_cube/: __init__.py  benchmark.py  crypto.py  debug.py  task.py  task_metadata.json  tool.py
cubes/browsercomp/tests/: test_smoke.py
cubes/miniwob/: Makefile  pyproject.toml
cubes/miniwob/src/miniwob_cube/: __init__.py  benchmark.py  debug.py  task.py  task_metadata.json
cubes/osworld-cube/: .env.template  Makefile  README.md  pyproject.toml
cubes/osworld-cube/scripts/: create_task_metadata.py
cubes/osworld-cube/src/osworld_cube/: __init__.py  _paths.py  axtree.py  benchmark.py  computer.py  debug.py  debug_docker.py  debug_task_metadata.json  debug_tasks.json  infra_loader.py  task.py  task_metadata.json
cubes/osworld-cube/src/osworld_cube/vm_backend/: __init__.py  evaluator.py  pyautogui_utils.py  setup_controller.py
cubes/osworld-cube/src/osworld_cube/vm_backend/getters/: __init__.py  calc.py  chrome.py  file.py  general.py  gimp.py  impress.py  misc.py  vlc.py
cubes/osworld-cube/src/osworld_cube/vm_backend/metrics/: __init__.py  chrome.py  docs.py  general.py  gimp.py  others.py  slides.py  table.py  thunderbird.py  utils.py  vlc.py  vscode.py
cubes/osworld-cube/tests/: conftest.py  osworld-azure-infra.json  test_cube.py  test_osworld.py  test_run_osworld.py
cubes/swebench-live-cube/: Makefile  pyproject.toml
cubes/swebench-live-cube/scripts/: create_task_metadata.py
cubes/swebench-live-cube/src/swebench_live_cube/: __init__.py  benchmark.py  debug.py  task.py  task_metadata.json  tool.py
cubes/swebench-live-cube/tests/: test_benchmark.py
cubes/swebench-verified-cube/: Makefile  pyproject.toml
cubes/swebench-verified-cube/scripts/: create_task_metadata.py
cubes/swebench-verified-cube/src/swebench_verified_cube/: __init__.py  benchmark.py  debug.py  task.py  task_metadata.json  tool.py
cubes/swebench-verified-cube/tests/: test_benchmark.py
cubes/terminalbench-cube/: Makefile  pyproject.toml
cubes/terminalbench-cube/scripts/: create_task_metadata.py
cubes/terminalbench-cube/src/terminalbench_cube/: __init__.py  benchmark.py  debug.py  pytest_parser.py  task.py  task_metadata.json  tool.py
cubes/terminalbench-cube/tests/: test_benchmark.py
cubes/webarena-verified/: Makefile  pyproject.toml
cubes/webarena-verified/scripts/: generate_task_metadata.py
cubes/webarena-verified/src/webarena_verified_cube/: __init__.py  benchmark.py  debug.py  resources.py  task.py  task_metadata.json  tool.py
cubes/webarena-verified/src/webarena_verified_cube/scripts/: all_sites_launch.sh  gitlab_launch.sh  map_launch.sh  reddit_launch.sh  shopping_admin_launch.sh  shopping_launch.sh  wikipedia_launch.sh
cubes/windows-agent-arena-cube/: .env.template  Makefile  README.md  pyproject.toml
cubes/windows-agent-arena-cube/packer/: .gitignore  bootstrap_winrm.py  manual_finish_image.py  run.sh  smoke_test.py  waa-windows.pkr.hcl
cubes/windows-agent-arena-cube/packer/scripts/: configure-autologon.ps1  drop-authorized-keys.ps1  embed-waa-server.ps1  install-azure-vm-agent.ps1  install-libreoffice.ps1  install-openssh-server.ps1  sysprep.ps1
cubes/windows-agent-arena-cube/scripts/: create_task_metadata.py  upload_image.py
cubes/windows-agent-arena-cube/src/waa_cube/: __init__.py  azure.py  benchmark.py  computer.py  debug.py  debug_task_metadata.json  debug_tasks.json  task.py  task_execution_info.json  task_metadata.json
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/: __init__.py  backend.py  evaluator.py  setup_controller.py
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/getters/: __init__.py  calc.py  chrome.py  edge.py  file.py  fileexplorer.py  general.py  gimp.py  impress.py  info.py  microsoftpaint.py  misc.py  msedge.py  settings.py  vlc.py  vscode.py  windows_clock.py
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/metrics/: __init__.py  basic_os.py  chrome.py  docs.py  edge.py  general.py  gimp.py  others.py  slides.py  table.py  thunderbird.py  utils.py  vlc.py  vscode.py
cubes/windows-agent-arena-cube/tests/: test_waa_benchmark.py
cubes/workarena/: Makefile  pyproject.toml
cubes/workarena/scripts/: generate_task_metadata.py
cubes/workarena/src/workarena_cube/: __init__.py  benchmark.py  debug.py  task.py  task_metadata.json  tools.py
cubes/workarena/tests/: test_task.py
design/: cube_uniformization.md
docs/: about.markdown  configuration.md  contributing.markdown  design-docker-service-provisioning.md  index.markdown  rfc-benchmark-config-and-scaling.md
integration-tests/: pyproject.toml  run_matrix.sh  test_debug_matrix.py  test_osworld_aws.py  test_osworld_azure.py  test_webarena_all_aws.py  test_webarena_debug_aws.py  test_webarena_debug_azure.py  test_webarena_debug_local.py
integration-tests/cube_integration_tests/: debug_harness.py
meta_agent/: README.md  test_workarena_cheat.py  workarena_hints.py
openspec/: README.md
recipes/: browsercomp.py  hello_miniwob.py  hello_swebench_live.py  hello_swebench_verified.py  hello_terminalbench.py  metrics.py  miniwob_browsergym.py  swe_agent_recipe.py  tool_api.py  webarena.py  workarena.py
tests/: conftest.py  test_base.py  test_browsergym.py  test_cube_episode.py  test_cube_experiment.py  test_environment.py  test_episode.py  test_episode_logs.py  test_eval_log.py  test_experiment.py  test_genny.py  test_inspect_results.py  test_retry_integration.py  test_storage.py  test_tool.py  test_tracer.py  test_xray_e2e.py  test_xray_utils.py  xray_screenshot_review.py  xray_test_helpers.py
(+314 files in other folders)
