
[project]
name = "cube-harness"
version = "0.1.0"
description = "cube-harness, open source agentic evaluation and data generation framework."
readme = "README.md"
authors = [
    { name = "Nicolas Gontier", email = "nicolas.gontier@servicenow.com" },
    { name = "Aman Jaiswal", email = "amanjaiswal73892@gmail.com" },
    { name = "Oleh Shliazhko", email = "oleh.shliazhko@servicenow.com" },
]
requires-python = ">=3.12"
dependencies = [
    "cube-standard>=0.1.0rc5",
    "cube-browser-playwright>=0.2.0",  # added back temporarily for browsergym.py, should be removed once browsergym.py is moved to cube-browser-tool package
    "pydantic~=2.0",
    "litellm~=1.80.8",
    "Pillow~=11.0",
    "beautifulsoup4~=4.14",
    "numpy~=2.3.5",
    "ray[default]>=2.52.1",
    "tenacity>=8.5.0",
    "python-dotenv~=1.2.0",
    "termcolor~=3.2",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "browsergym-core>=0.14.3",
    "mcp[cli]>=1.26",
    "msgpack>=1.0.0",
    "zstandard>=0.20.0",
]

[project.optional-dependencies]
# XRay trajectory viewer
analyze = [
    "gradio~=5.49",
    "pandas~=2.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
constraint-dependencies = ["pyasn1>=0.6.2", "cryptography>=46.0.5", "protobuf>=6.33.5"]


[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"] # sort imports

[tool.ruff.lint.per-file-ignores]
"meta_agent/recipes/*.py" = ["E402"]

[project.scripts]
ch-mcp-server = "cube_harness.mcp.server:main"
ch-xray = "cube_harness.analyze.xray:main"
ch-trace = "cube_harness.analyze.trace:main"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to be run sequantially (deselect with '-m \"not serial\"')",
    "integration: requires a live browser (headless Chromium via Playwright)"
]

[tool.setuptools.packages.find]
where = ["src"]
