[project]
name = "cube-integration-tests"
version = "0.1.0"
description = "End-to-end integration tests for CUBE infra backends + benchmark cubes"
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "pytest>=8.0",
    "tenacity>=9.1.4",
]

[tool.uv]
# Override transitive `cube-standard` URL so that packages pulled from PyPI
# (e.g. `cube-vm-backend` via `osworld-cube`) defer to our pin below.
override-dependencies = [
    "cube-standard @ git+https://github.com/The-AI-Alliance/cube-standard.git@feat/daytona-infra-config",
]
# Each backend's dependency tree (aws/azure/daytona) pulls different transitive
# constraints; declaring them as conflicts lets uv resolve one group at a time.
# aws/azure groups conflict with the local-path-pinned `cube-standard` used by
# local/daytona/toolkit (they pull it from git via osworld-cube/webarena).  The
# three local groups share the same local cube-standard and can coexist.
conflicts = [
    [{group = "aws"}, {group = "local"}],
    [{group = "aws"}, {group = "daytona"}],
    [{group = "aws"}, {group = "toolkit"}],
    [{group = "aws"}, {group = "modal"}],
    [{group = "azure"}, {group = "local"}],
    [{group = "azure"}, {group = "daytona"}],
    [{group = "azure"}, {group = "toolkit"}],
    [{group = "azure"}, {group = "modal"}],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cube_integration_tests"]

[dependency-groups]
aws = [
    "cube-infra-aws",
    "osworld-cube",
    "webarena-verified-cube",
]
azure = [
    "cube-infra-azure",
    "osworld-cube",
    "webarena-verified-cube",
]
local = [
    "terminalbench-cube",
    "swebench-verified-cube",
    "swebench-live-cube",
    "docker>=7.1.0",
    "tenacity>=9.1.4",
]
daytona = [
    "cube-infra-daytona",
    "terminalbench-cube",
    "swebench-verified-cube",
    "swebench-live-cube",
]
toolkit = [
    "cube-infra-toolkit",
    "terminalbench-cube",
    "swebench-verified-cube",
    "swebench-live-cube",
]
modal = [
    "cube-infra-modal",
    "terminalbench-cube",
    "swebench-verified-cube",
    "swebench-live-cube",
]
dev = [
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
# Show log output inline as tests run (no more silent hangs).
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-7s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
# Hard ceiling per test item — the harness also enforces this in a thread
# so the failure message is informative, but pytest-timeout is the backstop.
timeout = 960
markers = [
    "integration: end-to-end integration tests requiring external services",
]

[tool.uv.sources]
# Temporary git pin so CI (single-repo checkout) can resolve cube-standard.
# Swap back to `path = "../../cube-standard"` for local editable dev, or drop
# entirely once an rc6 is published on PyPI.
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config" }
cube-infra-aws = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-infra-aws" }
cube-infra-azure = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-infra-azure" }
cube-infra-daytona = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-infra-daytona" }
cube-infra-toolkit = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-infra-toolkit" }
cube-infra-modal = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-infra-modal" }
cube-vm-backend = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "feat/daytona-infra-config", subdirectory = "cube-resources/cube-vm-backend" }
osworld-cube = { path = "../cubes/osworld-cube", editable = true }
webarena-verified-cube = { path = "../cubes/webarena-verified", editable = true }
terminalbench-cube = { path = "../cubes/terminalbench-cube", editable = true }
swebench-verified-cube = { path = "../cubes/swebench-verified-cube", editable = true }
swebench-live-cube = { path = "../cubes/swebench-live-cube", editable = true }
