[project]
name = "miniwob-cube"
version = "1.0.0"
description = "MiniWob++ benchmark for cube"
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "miniwob>=1.0",
    "cube-browser-tool"
]

[project.entry-points."cube.benchmarks"]
miniwob-cube = "miniwob_cube.benchmark:MiniWobBenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = ["src/miniwob_cube/task_metadata.json"]

[tool.uv.sources]
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard"}

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
