[project]
name = "osworld-cube"
version = "0.2.0"
description = "OSWorld benchmark ported to the CUBE protocol"
requires-python = ">=3.12"
dependencies = [
    "cube-standard>=0.1.0rc7",
    "cube-computer-tool",
    "cube-vm-backend[docker]",
    "pillow>=9.0",
    "requests>=2.28",
    "requests-toolbelt>=0.10",
    "tqdm>=4.60",
    "lxml>=4.9",
    "cssselect>=1.2",
    "pdfplumber>=0.9",
    "PyYAML>=6.0",
    "python-docx>=1.0",
    "rapidfuzz>=3.0",
    "xmltodict>=0.13",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pypdf>=3.0",
    "PyPDF2>=3.0",
    "imagehash>=4.3",
    "scikit-image>=0.21",
    "librosa>=0.10",
    "pymupdf>=1.23",
    "formulas>=1.2",
    "pydrive>=1.3",
    "fastdtw>=0.3",
    "odfpy>=1.4",
    "mutagen>=1.47",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "tldextract>=3.4",
    "pyacoustid>=1.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
    "pytz>=2023.3",
    "python-dotenv>=1.0",
]

[project.entry-points."cube.benchmarks"]
osworld-cube = "osworld_cube.benchmark:OSWorldBenchmarkConfig"

[project.optional-dependencies]
azure = [
    "cube-infra-azure",
]
aws = [
    "cube-infra-aws",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = [
    "src/osworld_cube/task_metadata.json",
    "src/osworld_cube/debug_task_metadata.json"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as requiring a live InfraConfig (cloud VM)",
]

[tool.uv]
override-dependencies = ["protobuf>=6.33.5"]

[tool.uv.sources]
cube-computer-tool = { git = "https://github.com/The-AI-Alliance/cube-standard", subdirectory = "cube-tools/cube-computer-tool" }
cube-vm-backend = { git = "https://github.com/The-AI-Alliance/cube-standard", subdirectory = "cube-resources/cube-vm-backend" }
cube-infra-azure = { git = "https://github.com/The-AI-Alliance/cube-standard", subdirectory = "cube-resources/cube-infra-azure" }
cube-infra-aws = { git = "https://github.com/The-AI-Alliance/cube-standard", subdirectory = "cube-resources/cube-infra-aws" }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
