[project]
name = "swebench-live-cube"
version = "0.1.0"
description = "SWE-bench Live — continuously updated, contamination-resistant GitHub issue resolution"
requires-python = ">=3.12"
dependencies = [
    "cube-standard[docker]>=0.1.0rc7",
    "datasets",
]

[project.entry-points."cube.benchmarks"]
swebench-live-cube = "swebench_live_cube.benchmark:SWEBenchLiveBenchmarkConfig"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = ["src/swebench_live_cube/task_metadata.json"]

[tool.uv.sources]
# Track cube-standard from main while picking up PR #133 (infra-init) and
# subsequent updates. Every reference to the cube-standard repo MUST use the
# same URL+ref, otherwise uv treats them as conflicting sources for the same
# package. TODO: drop once cube-standard 0.1.0rc8 ships to PyPI.
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard" }

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
