[project]
name = "webarena-verified-cube"
version = "1.0.0"
description = "WebArena-Verified benchmark cube — 812 verified web automation tasks"
requires-python = ">=3.12"
dependencies = [
    "cube-standard>=0.1.0rc4",
    "cube-browser-tool>=0.2.0",
    "webarena-verified",
    "Pillow",
]

[project.entry-points."cube.benchmarks"]
webarena-verified-cube = "webarena_verified_cube.benchmark:WebArenaVerifiedBenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = ["src/webarena_verified_cube/task_metadata.json"]

[tool.uv.sources]
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard"}  # TODO: remove once 0.1.0rc5 released

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
