[project]
name = "workarena-cube"
version = "1.0.0"
description = "WorkArena ServiceNow benchmark for cube"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cube-standard>=0.1.0rc7",
    "browsergym-workarena",
    "termcolor",
    "cube-browser-tool>=0.2.0",
    "cube-browser-playwright>=0.2.0",
    "cube-chat-tool>=0.1.0",
    "playwright==1.44",
]

[project.entry-points."cube.benchmarks"]
workarena-cube = "workarena_cube.benchmark:WorkArenaBenchmarkConfig"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = ["src/workarena_cube/task_metadata.json"]

[tool.uv.sources]
# TODO: drop once cube-standard 0.1.0rc7 ships to PyPI
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard", branch = "nico_fix" }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
